# community-scrypto-examples

./: .gitignore  LICENSE  README.md
.github/workflows/: slot_machine.yml
bank/: Cargo.toml
bank/src/: lib.rs
bank/tests/: lib.rs
basic/access-pass/: Cargo.toml  README.md
basic/airdrop/: Cargo.toml  README.md
basic/airdrop-with-fixed-tokens-by-recipient/: Cargo.toml
basic/airdrop-with-withdraw/: Cargo.toml
basic/auction/: Cargo.toml  README.md
basic/bank/: Cargo.toml  README.md
basic/blueblood/: Cargo.toml  ClaimCompRoyalty.rtm  ClaimPackRoyalty.rtm  FreeToken.rtm  FreeTokenBob.rtm  sourceme
basic/coindispenser/: Readme.md
basic/digital-library/: Cargo.toml  README.md
basic/escrow/: Cargo.toml  README.md  script.sh
basic/flexi_faucet/: Cargo.toml  README.md
basic/guestbook/: Cargo.toml  README.md
basic/gumball-machine/: Cargo.toml
basic/minimal-e-commerce/: .gitignore  Cargo.toml  README.md  init.sh
basic/multisig-transmission-maker/: Cargo.toml  README.md
basic/multisig-wallet/: Cargo.toml  README.md
basic/payment-splitter/: Cargo.toml  README.md  build_rtm.sh  example.py  m.out  rtm_creator.py  script.sh
basic/payment-splitter/raw_transactions/: adding_shareholders.rtm  component_creation.rtm  funding_the_splitter.rtm  withdrawing_owed_amount.rtm
basic/payment-splitter/src/: lib.rs
basic/payment-splitter/tests/: lib.rs
basic/payment-splitter/transactions/: adding_shareholders.rtm  component_creation.rtm  funding_the_splitter.rtm  withdrawing_owed_amount.rtm
basic/pokerdicebank/: Cargo.toml  README.md  sourceme
basic/pokerdicebank/src/: lib.rs
basic/pokerdicebank/tests/: lib.rs
basic/product-marketplace/: Cargo.toml
basic/rad-mail/: Cargo.toml  create_mail_template.rtm
basic/radix-name-service/: .gitignore  Cargo.toml  README.md  rns.revup
basic/radix-name-service/src/: lib.rs
basic/restricted_asset/: Cargo.toml  readme.md
basic/stable-coin/: .gitignore  Cargo.toml  LICENSE  README.md
basic/time-lock-beneficiary/: Cargo.toml  README.md  deposit.rtm  get_timer.rtm  inst.rtm  instantiate.rtm  mint.rtm
basic/token-burn/: Cargo.toml  README.md
basic/token-creator/: Cargo.toml  readme.md
basic/token-sale/: Cargo.toml  README.md  create_tickets.rtm  start_sale.rtm  withdraw_payments.rtm
basic/token-vending-machine/: Cargo.toml
basic/tokenize_real_estate/: Cargo.toml  ReadME.md  component_owner_claim_xrd.rtm  component_owner_start.rtm  component_user_nft_delete.rtm  component_user_nft_mint.rtm  component_user_nft_view.rtm  component_user_update_nft_number.rtm  component_user_update_nft_owner.rtm  component_user_update_nft_propertytype.rtm
basic/transit/: Cargo.toml  README.md  script.sh  withdraw_dollars.rtm  withdraw_euros.rtm
basic/trueblood/: ClaimCompRoyaltyBlue.rtm  ClaimCompRoyaltyRed.rtm  ClaimPackRoyaltyBlue.rtm  FreeTokenBlue.rtm  FreeTokenBobPurple.rtm  FreeTokenPurple.rtm  FreeTokenRed.rtm  README.md  SetCompRoyaltyPurple.rtm  SetCompRoyaltyRed.rtm  sourceme
basic/ubi/: Cargo.toml  README.md
basic/utility_token_service/: .env  Cargo.toml  revup.json
basic/vesting/: Cargo.toml  README.md  build_rtm.sh  script.sh
basic/wrapper/: README.md  sourceme
chama_investment/: Cargo.toml
chama_investment/src/: lib.rs
communication/xrdmail/: .gitignore  Cargo.toml  README.md
defi/awesome-dex/: Cargo.toml  Readme.md  add_liquidity.rtm  instantiate_dex.rtm  remove_liquidity.rtm  swap.rtm
defi/awesome-token-dex/: Cargo.toml  Readme.md  add_liquidity.rtm  instantiate_dex.rtm  remove_liquidity.rtm  swap.rtm
defi/basic-liquidity-pool/: .env  Cargo.toml  test_script.mjs  utils.js
defi/bonding/: Cargo.toml  README.md
defi/bonding/bonding_macros/: Cargo.toml
defi/bonding/bonding_macros/src/: lib.rs
defi/bonding/bonding_macros/tests/: lib.rs
defi/bonding/src/: default_curve.rs  lib.rs  number.rs
defi/crowdsourcing/: Cargo.toml  README.md  script.sh
defi/donations/: Cargo.toml  README.md
defi/fixed-token-sale-with-royalty/: fixed_price_sale_with_royalty.rs
defi/flash-loans/: README.md
defi/flash-loans/flashloan/: Cargo.toml
defi/flash-loans/flashloan/src/: lib.rs
defi/folded_leverage/: Cargo.toml
defi/gumball-machine/: Cargo.toml  out.rtm  publish.sh  readme.md
defi/insurance/: Cargo.toml  README.md  script.sh
defi/krulkswap-simple-exchange/: Cargo.toml  readme.md
defi/lending_platform/: Cargo.toml  README.md  setup_and_run.sh
defi/liquidity-pool-manager/: Cargo.toml
defi/liquidity_pool_dao/: Cargo.toml  README.md
defi/marketplace/: Cargo.toml  README.md
defi/one_resource_pool_extended/: Cargo.toml  README.md
defi/options-market/: README.md
defi/order-book-dex/: Cargo.toml  README.md
defi/order-book-dex/src/: dex.rs  lib.rs  model.rs  trading_pair.rs
defi/order-book-dex/tests/: lib.rs
defi/order-book-dex/transactions/: add_trading_pair.rtm  close-limit-order-1.rtm  close-limit-order-2.rtm  close-limit-order-3.rtm  create-token-rusd.rtm  new-limit-orders.rtm  new-market-order-1.rtm  new-market-order-2.rtm  send-rusd-to-market-maker.rtm  send-rusd-to-market-taker.rtm
defi/real-estate-manager/: Cargo.toml  LICENSE  LICENSE APACHE  README.md
defi/real_estate_manager/: Cargo.toml  new_land  new_land_with_house
defi/save-with-friends/: .gitignore  Cargo.toml  README.md  account.json  publish.rtm  test.json
defi/single-token-amm-dex/: Cargo.toml  LICENSE  README.md  Test.md  Test.md.txt
defi/single-token-liquidity-pool-2/: .env  Cargo.toml  README.md  script.mjs  script_utils.js  test.rev
defi/test/: Cargo.toml
games/guess-it/: .env  Cargo.toml  README.md  gameplay.rev  insomnia-gameplay.json  scrypto_unit_README.md
games/guess-it/server/: .env  README.md  app.js  index.js  package.json
games/guess-it/server/routes/: radix.js
games/guess-it/server/views/: radix.ejs
games/guess-it/src/: lib.rs
games/guess-it/tests/: lib.rs
other/card-deck-nft/: Cargo.toml  README.md  instantiate.sh
other/card-deck-nft/src/: deck.rs  lib.rs
toys/pigeon/: Cargo.toml  README.md
toys/pigeon/src/: lib.rs
toys/rocks-example/: Cargo.toml
(+366 files in other folders)
