[package]
name = "payment_splitter"
version = "0.2.0"
edition = "2021"

[dependencies] # TODO: Update it so that we're using git + tag instead of a local path
sbor = { path = "/Users/omarabdulla/Radix/radixdlt-scrypto/sbor" }
scrypto = { path = "/Users/omarabdulla/Radix/radixdlt-scrypto/scrypto"}
regex = "1"

[dev-dependencies]
radix-engine = { path = "/Users/omarabdulla/Radix/radixdlt-scrypto/radix-engine"}

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = "debuginfo" # Strip debug info.

[lib]
crate-type = ["cdylib", "lib"]
