[package]
name = "radix-name-service"
version = "0.2.0"
edition = "2021"
authors = ["backyard-coder <94840973+backyard-coder@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
description = """
A basic Scrypto implementation of a DNS on Radix. Heavily inspired by ENS.
"""

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
sha2 = "0.10"

[dev-dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = "debuginfo" # Strip debug info.

[lib]
crate-type = ["cdylib", "lib"]
