[package]
name = "scrypto-bonding"
version = "0.3.0"
edition = "2021"
authors = ["devmannic <82296715+devmannic@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
description = """
A Scrypto package for creating and using bonding curves as an automated market maker on Radix
"""

[dependencies]
num-bigint = { version = "0.4.3", default-features = false, features = [] }
num-rational = { version ="0.4.0", optional = true, default-features = false, features = ["num-bigint"] }
num-traits = "0.2.14"
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
scrypto_statictypes = { git = "https://github.com/devmannic/scrypto_statictypes", tag = "v0.5.0" }
bonding_macros = { path = "bonding_macros" }

[dev-dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
scrypto-unit = { git = "https://github.com/devmannic/scrypto-unit", branch = "v0.3.0" }

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[features]
default = ["scrypto_statictypes/runtime_typechecks", "use_rationals"]
#default = ["scrypto_statictypes/runtime_typechecks" ]
use_rationals = ["num-rational"]
