[package]
name = "guess-it"
version = "0.1.0"
edition = "2021"
description = "A simple guessing game. A die is rolled and players can guess the closest number to win the pot!"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
regex = "1.3.3"
unescape = "0.1.0"

[dev-dependencies]
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
scrypto-unit = { git = "https://github.com/plymth/scrypto-unit", tag = "v0.2.0" }

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.

[lib]
crate-type = ["cdylib", "lib"]
